Image deletion logic for Property Update